Bug 337703 - Nicklist icons don't show up
Summary: Nicklist icons don't show up
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: frameworks
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks: 337512
  Show dependency treegraph
 
Reported: 2014-07-22 15:18 UTC by Eike Hein
Modified: 2014-08-09 13:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-07-22 15:18:12 UTC
Probably either theme loading or theme rendering. Or heck, maybe we're not even installing the themes right now. Or into the wrong place.
Comment 1 Peter Simonsson 2014-08-09 12:46:13 UTC
Git commit b502d9f94547d515069a6115f519ada5a8e317d1 by Peter Simonsson.
Committed on 09/08/2014 at 12:45.
Pushed by psn into branch 'frameworks'.

Fix loading of desktop files for nicklist themes

The QStandardPaths does not behave the same way as the old code so we
need to iterate over all the theme dirs.

M  +18   -1    src/config/theme_config.cpp

http://commits.kde.org/konversation/b502d9f94547d515069a6115f519ada5a8e317d1
Comment 2 Peter Simonsson 2014-08-09 13:17:52 UTC
Git commit 6e48fcd9497a5de56ba881b9b0b2fad5ac167187 by Peter Simonsson.
Committed on 09/08/2014 at 13:17.
Pushed by psn into branch 'frameworks'.

Fix loading of nicklist theme icons

M  +26   -2    src/viewer/images.cpp

http://commits.kde.org/konversation/6e48fcd9497a5de56ba881b9b0b2fad5ac167187