Fix loading of nicklist theme icons

BUG: 337703